// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useNoobFormBuilder should render without values 1`] = `
<div>
  <div>
    <form>
      <div>
        <div>
          Geometries
        </div>
        <div>
          <div>
            <input
              class="form-check-input"
              data-testid="geometries-point"
              name="geometries"
              type="checkbox"
              value="point"
            />
            Point
          </div>
          <div>
            <input
              class="form-check-input"
              data-testid="geometries-line"
              name="geometries"
              type="checkbox"
              value="line"
            />
            Line
          </div>
          <div>
            <input
              class="form-check-input"
              data-testid="geometries-polygon"
              name="geometries"
              type="checkbox"
              value="polygon"
            />
            Polygon
          </div>
        </div>
      </div>
      <div>
        <div>
          Layer
        </div>
        <select
          class="form-select"
          data-testid="layerId"
          name="layerId"
        >
          <option />
          <option
            value="test-layer-1"
          >
            Test layer 1
          </option>
          <option
            value="test-layer-2"
          >
            Test layer 2
          </option>
        </select>
      </div>
      <div>
        <div>
          Unit
        </div>
        <select
          class="form-select"
          data-testid="unit"
          name="unit"
        >
          <option />
          <option
            value="meter"
          >
            Meters
          </option>
          <option
            value="kilometers"
          >
            Kilometers
          </option>
        </select>
      </div>
      <div>
        <div>
          Name
        </div>
        <input
          class="form-control"
          data-testid="name"
          name="name"
          type="text"
        />
      </div>
      <div>
        <div>
          Start date
        </div>
        <input
          class="form-control"
          data-testid="startDate"
          name="startDate"
          type="datetime-local"
        />
      </div>
      <div>
        <div>
          Size
        </div>
        <input
          class="form-control"
          data-testid="size"
          name="size"
          type="number"
        />
      </div>
      <div
        class="d-flex justify-content-end"
      >
        <button
          class="btn btn-secondary mr-3"
          data-testid="cancel-button"
          type="reset"
        >
          Cancel button
        </button>
        <button
          class="btn btn-primary"
          data-testid="submit-button"
          type="submit"
        >
          Submit button
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`useNoobFormBuilder should render without values 2`] = `
<div>
  <div>
    <form>
      <div>
        <div>
          Geometries
        </div>
        <div>
          <div>
            <input
              class="form-check-input"
              data-testid="geometries-point"
              name="geometries"
              type="checkbox"
              value="point"
            />
            Point
          </div>
          <div>
            <input
              class="form-check-input"
              data-testid="geometries-line"
              name="geometries"
              type="checkbox"
              value="line"
            />
            Line
          </div>
          <div>
            <input
              class="form-check-input"
              data-testid="geometries-polygon"
              name="geometries"
              type="checkbox"
              value="polygon"
            />
            Polygon
          </div>
        </div>
      </div>
      <div>
        <div>
          Layer
        </div>
        <select
          class="form-select"
          data-testid="layerId"
          name="layerId"
        >
          <option />
          <option
            value="test-layer-1"
          >
            Test layer 1
          </option>
          <option
            value="test-layer-2"
          >
            Test layer 2
          </option>
        </select>
      </div>
      <div>
        <div>
          Unit
        </div>
        <select
          class="form-select"
          data-testid="unit"
          name="unit"
        >
          <option />
          <option
            value="meter"
          >
            Meters
          </option>
          <option
            value="kilometers"
          >
            Kilometers
          </option>
        </select>
      </div>
      <div>
        <div>
          Name
        </div>
        <input
          class="form-control"
          data-testid="name"
          name="name"
          type="text"
        />
      </div>
      <div>
        <div>
          Start date
        </div>
        <input
          class="form-control"
          data-testid="startDate"
          name="startDate"
          type="datetime-local"
        />
      </div>
      <div>
        <div>
          Size
        </div>
        <input
          class="form-control"
          data-testid="size"
          name="size"
          type="number"
        />
      </div>
      <div
        class="d-flex justify-content-end"
      >
        <button
          class="btn btn-secondary mr-3"
          data-testid="cancel-button"
          type="reset"
        >
          Cancel button
        </button>
        <button
          class="btn btn-primary"
          data-testid="submit-button"
          type="submit"
        >
          Submit button
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`useNoobFormBuilder should trigger onError if any 1`] = `
<div>
  <div>
    <form>
      <div>
        <div>
          Geometries
        </div>
        <div>
          <div>
            <input
              class="form-check-input"
              data-testid="geometries-point"
              name="geometries"
              type="checkbox"
              value="point"
            />
            Point
          </div>
          <div>
            <input
              class="form-check-input"
              data-testid="geometries-line"
              name="geometries"
              type="checkbox"
              value="line"
            />
            Line
          </div>
          <div>
            <input
              class="form-check-input"
              data-testid="geometries-polygon"
              name="geometries"
              type="checkbox"
              value="polygon"
            />
            Polygon
          </div>
        </div>
      </div>
      <div>
        <div>
          Layer
        </div>
        <select
          class="form-select"
          data-testid="layerId"
          name="layerId"
        >
          <option />
          <option
            value="test-layer-1"
          >
            Test layer 1
          </option>
          <option
            value="test-layer-2"
          >
            Test layer 2
          </option>
        </select>
      </div>
      <div>
        <div>
          Unit
        </div>
        <select
          class="form-select"
          data-testid="unit"
          name="unit"
        >
          <option />
          <option
            value="meter"
          >
            Meters
          </option>
          <option
            value="kilometers"
          >
            Kilometers
          </option>
        </select>
      </div>
      <div>
        <div>
          Name
        </div>
        <input
          class="form-control"
          data-testid="name"
          name="name"
          type="text"
        />
      </div>
      <div>
        <div>
          Start date
        </div>
        <input
          class="form-control"
          data-testid="startDate"
          name="startDate"
          type="datetime-local"
        />
      </div>
      <div>
        <div>
          Size
        </div>
        <input
          class="form-control"
          data-testid="size"
          name="size"
          type="number"
        />
      </div>
      <div>
        <div>
          Form has errors
        </div>
        <div>
          Size must be between 0 and 1000
        </div>
      </div>
      <div
        class="d-flex justify-content-end"
      >
        <button
          class="btn btn-secondary mr-3"
          data-testid="cancel-button"
          type="reset"
        >
          Cancel button
        </button>
        <button
          class="btn btn-primary"
          data-testid="submit-button"
          type="submit"
        >
          Submit button
        </button>
      </div>
    </form>
  </div>
</div>
`;
